Melhorar strings de exibição